--- a/lesson-server/src/main/resources/application.yml
+++ b/lesson-server/src/main/resources/application.yml
@@ -23,15 +23,15 @@ spring:
   redis:
     host: localhost
     port: 6379
-    password: 1234
+    password: xxxxx
     database: 0
   # 数据源配置（使用 Druid）
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver # 数据库驱动
       url: jdbc:mysql://localhost:3306/lesson?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-      username: root
-      password: 1234
+      username: xxxx
+      password: xxxx
       # 连接池优化配置
       initial-size: 10
       min-idle: 10
@@ -65,6 +65,20 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true # 下划线转驼峰
 
+# =============== 文件存储配置 支持阿里云与minio一键切换，默认阿里云 ===============
+storage:
+  type: oss # 可选 minio 或 oss
+  oss:
+    #endpoint: https://oss-cn-beijing.aliyuncs.com #上线才使用，不然会有跨域问题
+    endpoint: xxxxx
+    accessKeyId: xxxx
+    accessKeySecret: xxxxx
+    bucketName: xxxxxx
+  minio:
+    endpoint:
+    accessKey:
+    secretKey:
+    bucketName:
 # =============== Swagger 配置 ===============
 # 访问地址：http://localhost:8088/doc.html   设置为false 则不可用
 swagger:
