--- a/lesson-server/src/main/resources/application.yml
+++ b/lesson-server/src/main/resources/application.yml
@@ -23,15 +23,15 @@ spring:
   redis:
     host: localhost
     port: 6379
-    password: xxxxx
+    password: 1234
     database: 0
   # 数据源配置（使用 Druid）
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver # 数据库驱动
       url: jdbc:mysql://localhost:3306/lesson?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-      username: xxxx
-      password: xxxx
+      username: root
+      password: 1234
       # 连接池优化配置
       initial-size: 10
       min-idle: 10
@@ -70,10 +70,10 @@ storage:
   type: oss # 可选 minio 或 oss
   oss:
     #endpoint: https://oss-cn-beijing.aliyuncs.com #上线才使用，不然会有跨域问题
-    endpoint: xxxxx
-    accessKeyId: xxxx
-    accessKeySecret: xxxxx
-    bucketName: xxxxxx
+    endpoint: 111
+    accessKeyId: L111
+    accessKeySecret: 111
+    bucketName: 111
   minio:
     endpoint:
     accessKey:
